# playground2

./: prepare.sh
asm/: Makefile.pi
asm/hello/: Makefile  make.sh
asm/hello/src/: main.s
cmake/bat_level/: CMakeLists.txt  Makefile  api.h  clean.sh  linux_api.cpp  main.cpp  make_linux.sh  make_win.sh  win_api.cpp
cmake/counting_sort/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
cmake/counting_sort/src/: main.c
cmake/hw/: CMakeLists.txt  main.c
cpp/: .Makefile  .make.sh  Makefile  Makefile.main  Makefile.pi.clang  Makefile.pi.gcc  Makefile.win64  Makefile.x86_64.gcc
cpp/batt_tool/: .Makefile  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  make.sh
cpp/batt_tool.bak/: CMakeLists.txt  README.md
cpp/batt_tool.bak/src/: main.c
cpp/bg_extract/: CMakeLists.txt
cpp/bg_extract/src/: main.cpp
cpp/counting_sort/: CMakeCache.txt  Makefile  less
cpp/counting_sort/src/: main.c  untitled.py
cpp/database_school/: Makefile
cpp/database_school/src/: main.c
cpp/database_schoolv2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  data  data.txt  make.sh
cpp/database_schoolv2/src/: main.c  main_simple.back
cpp/de_dupe/: CMakeCache.txt  CMakeLists.txt  Makefile  analysis  cmake_install.cmake  gmon.out  make.sh
cpp/de_dupe/old_build_system/: Makefile  make.sh
cpp/de_dupe/src/: main.backup  main.backup2  main.backup3  main.backup4  main.cpp  main.cpp.backup
cpp/denar/: Makefile  make.sh
cpp/denar/src/: main.c
cpp/frac/: Makefile
cpp/frac/src/: frac.cpp  frac.hpp  main.cpp
cpp/gcd/: Makefile  make.sh
cpp/gcd/src/: main.cpp
cpp/glide/: CMakeCache.txt  CMakeLists.txt  sudo
cpp/glide/src/: array  display_data.hpp  main.cpp  static.hpp
cpp/gmp_test/: Makefile  make.sh
cpp/gmp_test/src/: main.cpp
cpp/grapher/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  make.sh
cpp/grapher/src/: main.c
cpp/gtk_hw/: CMakeLists.txt  Makefile  make.sh
cpp/gtk_hw/src/: main.cpp
cpp/matrix_transpose/: Makefile
cpp/matrix_transpose/src/: main.c
cpp/mmio/: Makefile  make.sh
cpp/mmio/src/: common.cpp  common.h  main.cpp  mmio.cpp  mmio.h  tests.cpp  tests.h
cpp/mmio_backup/: Makefile  make.sh
cpp/mmio_backup/src/: main.cpp  mmio.cpp  mmio.h
cpp/mmio_backup2/: Makefile
cpp/mmio_backup2/src/: main.cpp  mmio.cpp  mmio.h
cpp/mmio_backup3/src/: mmio.h
cpp/opencl_hw/: Makefile
cpp/opencl_hw.backup/: CMakeLists.txt
cpp/opencl_hw.backup/src/: kernel.ocl  main.cpp
cpp/opencl_hw/slprj/_cgxe/DC_motor_simulacija_simulink2021/: DC_motor_simulacija_simulink2021_Cache.mat
cpp/opencl_hw/slprj/_cgxe/NAL/: NAL_Cache.mat
cpp/opencl_hw/slprj/_jitprj/: PqmLPMRVDRykvtMRlMq6CC.l  PqmLPMRVDRykvtMRlMq6CC.mat  jitEngineAccessInfo.mat
cpp/opencl_hw/src/: cl_boilerplate.cpp  kernel.ocl  macro_tools.hpp  main.cpp  read_to_string.cpp
cpp/opencl_hw/src.backup/: check_err.hpp  kernel.ocl  macro_tools.h  main.cpp
cpp/opencl_hw2/: CMakeCache.txt  CMakeLists.txt  Makefile.back  cmake_install.cmake  make.sh
cpp/opencl_hw2/src/: check_err.cpp  cl_boilerplate.hpp  main.cpp
cpp/opengl_ui/: Makefile
cpp/opengl_ui/src/: basic.fs  basic.vs  create_shader.cpp  create_shader.hpp  main.cpp  read_to_string.cpp  read_to_string.hpp
cpp/patcher/: Makefile  make.sh  perf-flags  perf-flags-parsed  perf.data  sublime nag  test.txt
cpp/patcher/school/: math.c  naloga2.c  naloga3.c  read.c
cpp/patcher/src/: main.cpp
cpp/pmr/: CMakeLists.txt
cpp/pmr/src/: main.cpp
cpp/pyramid/: Makefile  make.sh
cpp/pyramid/src/: main.back  main.c
cpp/qt_win/: Makefile  make.sh
cpp/qt_win/src/: main.cpp
cpp/radix_sort/: Makefile
cpp/radix_sort/src/: main.cpp
cpp/schedule/: CMakeLists.txt  patern.txt
cpp/schedule/src/: display.cpp  display.h  main.cpp  types.h
cpp/sh3/: make.sh
cpp/sh3/src/: main.cpp
cpp/sort/: Makefile  make.sh
cpp/sort/src/: main.c
cpp/spawn/: CMakeLists.txt
cpp/spawn/src/: main.cpp
cpp/stevke/: Makefile
cpp/stevke/src/: main.c
cpp/thinkfan/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  make.sh
cpp/thinkfan/src/: get_temp.cpp  get_temp.hpp  main.cpp  set_level.c  set_level.h
cpp/thread_pool/: Makefile
cpp/thread_pool/src/: main.cpp  queue.cpp  queue.h
cpp/variadic/: Makefile
cpp/variadic/src/: main.cpp
cpp/vizitka/: Makefile
cpp/vizitka/src/: main.c
cpp/vizitka_simple/: Makefile
cpp/vizitka_simple/src/: main.c
cpp/vulkan/: CMakeLists.txt  build.sh  build_host.sh  build_shaders.sh  sync_jobs.sh
cpp/vulkan/src/: logging.h  main.cpp  simple_shader.frag
cpp/write_tga/: .vanessa-writes-a.tga-autosave.kra  Makefile  vanessa-writes-a.tga
cpp/write_tga/src/: main.cpp  main.example
hashcat/: hash.sh  hash_set  hc.sh  pass.txt  passwd.txt  rules
haskell/: Makefile  fix-broken-packages.sh  functions.hi  functions.hs  main
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
java/csgo_acc_stats/: main.java
java/hw/src/: main.java
latex/temp/: main.tex
py/: auto_run.sh  mp_example.py  tyler.py
py/antenna/: common.py
py/btdb_sim/: 0.csv  1.csv  2.csv  aasync.py  game.py  main.py  printer.py
py/clipboard/: clipboard.txt  main.py
py/crackme/: keygen.py
py/faze1/: main.py
py/opencv/: fft.py  framelimiter.py  main.py  ocl.py  ocr.py  profiler.py  template.cl  typesafety.py  utility.py  vision.py
py/opencv/nn/: generate_samples.py  main.py  main_nmist.py  neg_ss.py  nn_h.py  pbar.py  readme.txt  train.py
py/opencv/nn/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
py/opencv/nn/model/: saved_model.pb
py/opencv/nn/model copy/: keras_metadata.pb
py/opencv/nn/model/variables/: variables.index
py/opencv/nn/model2/: keras_metadata.pb  saved_model.pb
py/opencv/nn_deprecated/: nn_manual.py  nn_tf_example.py
py/scraper/: main.py
py/shared_sim/: sim.py
py/uni/ST/: nosilec.py
sycl/: CMakeLists.txt
sycl/src/: main.cpp
verilog/: Makefile
verilog/adder/: Makefile  make.sh
verilog/adder/src/: top.v
(+2 files in other folders)
